# yandex-music-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: config.py  keyboards.py  main.py  middlewares.py
bot/handlers/: callbacks.py  inline.py  link.py  system.py
bot/renderers/: _helpers.py  album_card.py  artist_card.py  playlist_card.py  similar_list.py  track_card.py
bot/services/: cache.py  link_parser.py  songlink.py  yandex.py
docs/superpowers/plans/: 2026-04-25-yandex-music-bot.md
docs/superpowers/specs/: 2026-04-25-yandex-music-bot-design.md
scripts/: get_yandex_token.py
tests/: test_cache.py  test_callbacks.py  test_config.py  test_inline.py  test_keyboards.py  test_link_handler.py  test_link_parser.py  test_middlewares.py  test_other_renderers.py  test_songlink.py  test_system_handlers.py  test_track_renderer.py  test_yandex_client.py
