[project]
name = "yandex-music-bot"
version = "0.1.0"
description = "Telegram bot for Yandex.Music links"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.13,<4",
    "yandex-music==2.2.0",
    "httpx>=0.27",
    "redis>=5.0",
    "pydantic-settings>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "fakeredis>=2.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]
